--- a/index.html
+++ b/index.html
@@ -7,26 +7,6 @@
     <link rel="stylesheet" href="../CSS/index.css">
 </head>
 <body>
-    <div class="box">
-
-    </div>
-    <div class="container">
-        <p class="p1">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos earum odit officia! Ullam libero, vel accusamus exercitationem vitae ut sit odit, commodi temporibus necessitatibus tenetur? Ad magni ea nam nostrum.
-            Ipsum, minus maiores! Quod dolorem tempore necessitatibus! Dicta dolorum laboriosam ipsam iure. Deserunt eligendi cum praesentium! Cumque aliquid ullam dolore nihil ea, consectetur distinctio dolorem ex recusandae, adipisci, porro rem!
-            Alias enim molestiae culpa sit et officiis corporis pariatur eius, asperiores tempore dicta quia ad consequuntur accusamus deleniti ducimus delectus sapiente ut quaerat nesciunt minus architecto? Rem earum dolor dicta!
-        </p>
-        <p class="p2">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos earum odit officia! Ullam libero, vel accusamus exercitationem vitae ut sit odit, commodi temporibus necessitatibus tenetur? Ad magni ea nam nostrum.
-            Ipsum, minus maiores! Quod dolorem tempore necessitatibus! Dicta dolorum laboriosam ipsam iure. Deserunt eligendi cum praesentium! Cumque aliquid ullam dolore nihil ea, consectetur distinctio dolorem ex recusandae, adipisci, porro rem!
-            Alias enim molestiae culpa sit et officiis corporis pariatur eius, asperiores tempore dicta quia ad consequuntur accusamus deleniti ducimus delectus sapiente ut quaerat nesciunt minus architecto? Rem earum dolor dicta!
-        </p>
-        <p class="p3">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos earum odit officia! Ullam libero, vel accusamus exercitationem vitae ut sit odit, commodi temporibus necessitatibus tenetur? Ad magni ea nam nostrum.
-            Ipsum, minus maiores! Quod dolorem tempore necessitatibus! Dicta dolorum laboriosam ipsam iure. Deserunt eligendi cum praesentium! Cumque aliquid ullam dolore nihil ea, consectetur distinctio dolorem ex recusandae, adipisci, porro rem!
-            Alias enim molestiae culpa sit et officiis corporis pariatur eius, asperiores tempore dicta quia ad consequuntur accusamus deleniti ducimus delectus sapiente ut quaerat nesciunt minus architecto? Rem earum dolor dicta!
-        </p>
-    </div>
-     
+    <a href="resume.html">Resume</a><a href="flag.html">Flag</a><a href="chess.html">Chess</a><a href="form3.html">Form1</a><a href="Form2.html">Form2</a>
 </body>
 </html>
