--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="../CSS/index.css">
 </head>
 <body>
-    <a href="resume.html">Resume</a><a href="flag.html">Flag</a><a href="chess.html">Chess</a><a href="form3.html">Form1</a><a href="Form2.html">Form2</a>
+    <a href="resume.html"></a><a href="flag.html"></a><a href="chess.html"></a><a href="form3.html"></a><a href="Form2.html"></a>
 </body>
 </html>
