--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>position</title>
-    <link rel="stylesheet" href="../CSS/index.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <a href="resume.html"></a><a href="flag.html"></a><a href="chess.html"></a><a href="form3.html"></a><a href="Form2.html"></a>
+    <a href="resume.html">resume</a><a href="flag.html">Flag</a><a href="chess.html">Chess</a><a href="form3.html">Form1</a><a href="Form2.html">Form2</a>
 </body>
 </html>
