--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <a href="resume.html">resume</a><a href="flag.html">Flag</a><a href="chess.html">Chess</a><a href="form3.html">Form1</a><a href="Form2.html">Form2</a>
+    <a href="resume.html">resume</a>
+    <a href="flag.html">Flag</a>
+    <a href="chess.html">Chess</a>
+    <a href="form3.html">Form1</a>
+    <a href="Form2.html">Form2</a>
 </body>
 </html>
