--- a/resume.html
+++ b/resume.html
@@ -26,7 +26,7 @@
                  <!-- dp and namestarts -->
    <div>
       
-      <img src="prakash.jpg" alt="prakash">
+      <img src="../images/prakash.jpg" alt="prakash">
       
       <p id="name">N.prakash</p>
       <p id="name">BCA( Bachelor of computer application)</p>
