--- a/flag.html
+++ b/flag.html
@@ -8,7 +8,7 @@
         <div class="flag">
             <div class="top"></div>
             <div class="middle">
-       <img src="../images/chakkara.png" alt="ashoka chakkara"> 
+       <img src="chakkara.png" alt="ashoka chakkara"> 
             </div>
             <div class="bottom"></div>
     
