--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <a href="chess.html">Chess</a>
     <a href="form3.html">Form1</a>
     <a href="Form2.html">Form2</a>
+    <a href="Time table.html">time table</a>
+    
 </body>
 </html>
