--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <a href="form3.html">Form1</a>
     <a href="Form2.html">Form2</a>
     <a href="Time table.html">time table</a>
-    
+    <a href="Table.html">Table</a>
 </body>
 </html>
