--- a/resume.html
+++ b/resume.html
@@ -16,9 +16,8 @@
    <div class="about"> 
       <ol>
       <!---<a href="../Html/resume.html"><b>Home</b></a>--->
-      <li><a href="../Html/about.html"><b>about</b></a></li>
-      <li><a href="../Html/additional.html"><b>additional info</b></a></li>
-      <li><a href="735826828"><b>contact</b></a></li>
+      <li><a href="about2.html"><b>about</b></a></li>
+      <li><a href="contact1.html"><b>contact</b></a></li>
    </ol>
    </div>
 </nav>
@@ -26,7 +25,7 @@
                  <!-- dp and namestarts -->
    <div>
       
-      <img src="../images/prakash.jpg" alt="prakash">
+      <img src="prakash.jpg" alt="prakash">
       
       <p id="name">N.prakash</p>
       <p id="name">BCA( Bachelor of computer application)</p>
@@ -52,7 +51,7 @@
    </div>
    <div class="cv">
       Download resume
-      <a href="../images/Java Prakash.N.pptx"><i class="fa-solid fa-cloud-arrow-down"></i></a>
+      <a href="Prakash Resume.pdf"><i class="fa-solid fa-cloud-arrow-down"></i></a>
 
    </div>
 </div>
