--- a/prakashResume.html
+++ b/prakashResume.html
@@ -41,14 +41,14 @@
 
         <!-- <div class="cv">
             Download resume
-            <a href="../images/Prakash Resume.pdf"><i class="fa-solid fa-cloud-arrow-down"></i></a>
+            <a href="Prakash Resume.pdf"><i class="fa-solid fa-cloud-arrow-down"></i></a>
          </div> -->
     </div>
            <!------------ Home page Content Ending----------------------->
            <!------------  About Starting----------------------->
 <section class="About">
 <div class="about1">
-            <img src="../images/prakash4.jpg">
+            <img src="prakash4.jpg">
     <div class="Text2">
             <h2>About Me</h2>
             <h4>Developer and Designer</h4>
@@ -59,7 +59,7 @@
         <!-- <button type="button">Let's Talk</button> -->
         <div class="Download">
             Download Resume <br>
-            <a href="../images/Prakash Resume.pdf"><i class="fa-solid fa-download fa-bounce"></i></a>
+            <a href="Prakash Resume.pdf"><i class="fa-solid fa-download fa-bounce"></i></a>
         </div>
         <div class="detail">
             <h3>Personal detail</h3>
