--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <a href="resume.html">resume</a>
+    <a href="prakashResume.html">PrakashResume</a>
     <a href="flag.html">Flag</a>
     <a href="chess.html">Chess</a>
     <a href="form3.html">Form1</a>
