--- a/prakashResume.html
+++ b/prakashResume.html
@@ -14,10 +14,10 @@
         <nav>
             <h2>Prakash</h2>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">contact</a></li>
-                <li><a href="#">Feedback</a></li>
+                <li><a href="#Home">Home</a></li>
+                <li><a href="#About">About</a></li>
+                <li><a href="#contact">contact</a></li>
+                <li><a href="#Feedback">Feedback</a></li>
             </ul>
         </nav>
         <!-- -------------------------- Nav Bar Ending---------------------------------------- -->
@@ -41,14 +41,14 @@
 
         <!-- <div class="cv">
             Download resume
-            <a href="Prakash Resume.pdf"><i class="fa-solid fa-cloud-arrow-down"></i></a>
+            <a href="../images/Prakash Resume.pdf"><i class="fa-solid fa-cloud-arrow-down"></i></a>
          </div> -->
     </div>
            <!------------ Home page Content Ending----------------------->
            <!------------  About Starting----------------------->
 <section class="About">
 <div class="about1">
-            <img src="prakash4.jpg">
+            <img src="../images/prakash4.jpg">
     <div class="Text2">
             <h2>About Me</h2>
             <h4>Developer and Designer</h4>
@@ -59,7 +59,7 @@
         <!-- <button type="button">Let's Talk</button> -->
         <div class="Download">
             Download Resume <br>
-            <a href="Prakash Resume.pdf"><i class="fa-solid fa-download fa-bounce"></i></a>
+            <a href="../images/Prakash Resume.pdf"><i class="fa-solid fa-download fa-bounce"></i></a>
         </div>
         <div class="detail">
             <h3>Personal detail</h3>
@@ -107,7 +107,7 @@
         <!------------  About Starting------------------------->
         <!------------  Contact Starting----------------------->
 
-        <section class="contact">
+        <!-- <section class="contact">
             <div class="content1">
                 <h2>Contact</h2>
                 <p>Hi you can contact me by using this contact details for get more information
@@ -124,7 +124,7 @@
                         </div>
                     </div>
                     <div class="box">
-                        <div class="icon"><i class="fa-solid fa-envelope"></i></div>
+                        <div class="icon"><a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox"><i class="fa-solid fa-envelope"></i></a></div>
                         <div class="text3">
                             <h3>Email</h3>
                             <p>prakashnatarajan663@gmail.com</p>
@@ -157,8 +157,42 @@
                             <input type="submit" name="" value="Send">
                         </div>
                      </form>
+                </div> 
+            </div>
+        </section> -->
+        <section class="contact">
+            <div class="content1">
+                <h2>Contact</h2>
+                <p>Hi you can contact me by using this contact details for get more information
+                   by using contact
+                </p>
+            </div>
+            <div class="container">
+                <div class="contactinfo">
+                    <div class="box">
+                        <div class="icon"><i class="fa-solid fa-location-dot"></i></div>
+                        <div class="text3">
+                            <h3>Address</h3>
+                            <p>18/23 mgr nagar 2nd main road velachery ch-42</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="icon"><a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox"><i class="fa-solid fa-envelope"></i></a></div>
+                        <div class="text3">
+                            <h3>Email</h3>
+                            <p>prakashnatarajan663@gmail.com</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="icon"><i class="fa-solid fa-phone"></i></div>
+                        <div class="text3">
+                            <h3>Phone No</h3>
+                            <p>7358269828</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
+        <!-- -----------------------------------Contact Ending------------------------------------- -->
 </body>
 </html>
