--- a/prakashResume.html
+++ b/prakashResume.html
@@ -41,7 +41,7 @@
 
         <!-- <div class="cv">
             Download resume
-            <a href="../images/Prakash Resume.pdf"><i class="fa-solid fa-cloud-arrow-down"></i></a>
+            <a href="Prakash Resume.pdf"><i class="fa-solid fa-cloud-arrow-down"></i></a>
          </div> -->
     </div>
            <!------------ Home page Content Ending----------------------->
