--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <a href="resume.html">resume</a>
     <a href="prakashResume.html">PrakashResume</a>
+    <a href="Ex.html">PrakashResume1</a>
     <a href="flag.html">Flag</a>
     <a href="chess.html">Chess</a>
     <a href="form3.html">Form1</a>
