--- a/Ex.html
+++ b/Ex.html
@@ -39,7 +39,7 @@
         <div class="container">
             <div class="row">
                 <div class="about1">
-                    <img src="../images/prakash4.jpg">
+                    <img src="prakash4.jpg">
                 </div>
                 <div class="about2">
                     <h1>About Me</h1>
@@ -167,7 +167,7 @@
                         </div>
                        <div class="cv">
                            <p>Download resume</p> 
-                          <a href="../images/Prakash Resume.pdf"><i class="fa-solid fa-download fa-bounce"></i></a>
+                          <a href="Prakash Resume.pdf"><i class="fa-solid fa-download fa-bounce"></i></a>
                         </div>
                         
                     </div>
