--- a/Ex.html
+++ b/Ex.html
@@ -39,7 +39,7 @@
         <div class="container">
             <div class="row">
                 <div class="about1">
-                    <img src="prakash4.jpg">
+                    <img src="../images/prakash4.jpg">
                 </div>
                 <div class="about2">
                     <h1>About Me</h1>
@@ -161,13 +161,13 @@
                         <p><i class="fa-solid fa-paper-plane"></i>prakashnatarajan663@gmail.com</p>
                         <p><i class="fa-solid fa-phone"></i>735826828</p>
                         <div class="icon">
-                            <a href=""><i class="fa-brands fa-github"></i></a>
-                            <a href=""><i class="fa-brands fa-linkedin"></i></a>
-                            <a href=""><i class="fa-brands fa-wordpress"></i></a>
+                            <a href="https://github.com/PRAKASH290103/prakash290103.github.io"><i class="fa-brands fa-github"></i></a>
+                            <a href="https://www.linkedin.com/in/prakash-natarajan-19843026a"><i class="fa-brands fa-linkedin"></i></a>
+                            <a href="https://wordpress.com/view/prakash757.wordpress.com"><i class="fa-brands fa-wordpress"></i></a>
                         </div>
                        <div class="cv">
                            <p>Download resume</p> 
-                          <a href="Prakash Resume.pdf"><i class="fa-solid fa-download fa-bounce"></i></a>
+                          <a href="../images/Prakash Resume.pdf"><i class="fa-solid fa-download fa-bounce"></i></a>
                         </div>
                         
                     </div>
